# claudia

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: architecture.md  hooks-and-extraction.md  mcp-tools-reference.md
src/central_brain/: __init__.py  cli.py  code_intel.py  db.py  embedder.py  extract.py  models.py  search.py  server.py
